--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <h2>About</h2>
         <p>EDELHART crafts pieces that balance light and shadow, precision and emotion.</p>
         <div style="text-align: left; font-style: italic; margin-top: 20px;">
-          <p><strong>"EDELHART"</strong> “How does Edelhart sound?” - M</p>
+          <p><strong>"EDELHART"</strong> "How does Edelhart sound?" - M</p>
           <p>"Edel" means noble or precious—like edelstein (precious stone) or edelmetall (precious metal). "Hart" means like strong or resilient, and phonetically, "hart" also echoes the word "heart". Together, "Edelhart" evokes the image of a heart forged from rare, valuable metal—symbolizing both strength and inner beauty.</p>
           <p>To us, "Edelhart" is more than a name. It captures the essence of jewelry that holds intrinsic worth: hand-cut gemstones paired with precious metals, shaped and refined by master artisans. With a deep appreciation for core values and refined craftsmanship, we create timeless pieces that embody the enduring art of jewelry making—where beauty, technique, and soul meet.</p>
           <p>Thank you M, for a name that speaks to who we are.</p>
@@ -506,6 +506,8 @@
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy for Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy for Facebook</button>
     </footer>
   </aside>
 </div>
