--- a/products/ee-male-ring-silver.html
+++ b/products/ee-male-ring-silver.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EE male ring — silver · EDELHART</title>
-  <meta name="description" content="EE male ring in silver — sterling silver with bright polish. Distinctive EE geometry." />
+  <meta name="description" content="EE male ring in silver — sterling silver with a luminous finish. Balanced weight and clean form." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,6 +40,10 @@
         <a href="../index.html#contact">Contact</a>
         <span class="sep">·</span>
         <a href="../index.html#about">About</a>
+        <span class="sep">·</span>
+        <button class="cart-toggle" type="button" aria-label="Open cart">
+          Cart <span class="cart-count" aria-hidden="true">0</span>
+        </button>
       </div>
     </nav>
   </div>
@@ -81,6 +85,7 @@
             <select id="metal" name="metal">
               <option>E-Silver</option>
               <option>Black Rhodium</option>
+              <option>14K Gold</option>
             </select>
           </div>
 
@@ -96,12 +101,12 @@
           <div>
             <label for="size">Size</label>
             <select id="size" name="size">
-              <option>0</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>5</option>
-              <option>6</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
               <option>Custom size</option>
             </select>
           </div>
@@ -117,20 +122,31 @@
 
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <button type="submit" class="btn primary">Order via WhatsApp</button>
-
-            <a class="btn" href="https://www.instagram.com/edelhartvx/" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16">
+            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20male%20ring%20%E2%80%94%20silver."
+               class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
+              </svg>
+              WhatsApp
+            </a>
+            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
               </svg>
-              Order via Instagram
-            </a>
-
-            <a class="btn" href="https://www.facebook.com/people/Edelhart/61578850709155/" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16">
+              Copy for Instagram
+            </button>
+            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
               </svg>
-              Order via Facebook
+              Copy for Facebook
+            </button>
+            <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
+               class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M12 2a7 7 0 00-7 7c0 5.2 7 13 7 13s7-7.8 7-13a7 7 0 00-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
+              </svg>
+              Location
             </a>
           </div>
         </form>
@@ -146,7 +162,7 @@
         <h3>About This Piece</h3>
         <p>
           The EE male ring embodies our signature aesthetic — refined minimalism with a statement edge.
-          Crafted in sterling silver with bright polish and distinctive EE geometry.
+          Crafted in sterling silver with a luminous finish, this piece features balanced weight and clean form.
           Each ring is hand-finished to ensure exceptional quality and lasting beauty.
         </p>
       </div>
@@ -216,6 +232,35 @@
     <small><a href="../index.html#home">Back to home ↑</a></small>
   </div>
 </footer>
+
+<!-- Cart drawer -->
+<div class="cart-drawer" aria-hidden="true">
+  <div class="cart-overlay"></div>
+  <aside class="cart-panel" role="dialog" aria-modal="true" aria-label="Cart">
+    <header class="cart-header">
+      <h2>Your Cart</h2>
+      <button type="button" class="cart-close" aria-label="Close cart">✕</button>
+    </header>
+    <div class="cart-body">
+      <div class="cart-empty">Your cart is empty.</div>
+      <ul class="cart-items"></ul>
+    </div>
+    <footer class="cart-footer">
+      <div class="cart-summary">
+        <span>Total</span>
+        <span class="cart-total">$0</span>
+      </div>
+      <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
+        Send order via WhatsApp
+      </a>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy for Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy for Facebook</button>
+    </footer>
+  </aside>
+</div>
+
+<!-- Back to top -->
+<button id="back-to-top" aria-label="Back to top">↑</button>
 
 <script src="../js/app.js" defer></script>
 </body>
