--- a/products/ee-female-ring-silver.html
+++ b/products/ee-female-ring-silver.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EE female ring — silver · EDELHART</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="EE female ring in silver — sterling silver with a luminous finish. Balanced weight and clean form." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -213,9 +213,11 @@
           <p>Pair it with complementary pieces.</p>
         </div>
         <div class="related-strip" id="dynamic-related">
+          <button class="slider-arrow slider-arrow-prev" type="button" aria-label="Previous related item">‹</button>
           <div class="related-track" data-auto="true">
             <!-- Dynamically populated by JS -->
           </div>
+          <button class="slider-arrow slider-arrow-next" type="button" aria-label="Next related item">›</button>
           <div class="swipe-indicator" aria-hidden="true"><div class="thumb"></div></div>
         </div>
       </section>
